--- a/config.toml.sample
+++ b/config.toml.sample
@@ -2,6 +2,10 @@
 start_sample = "start_sample.jpg"
 end_sample = "end_sample.jpg"
 
+[win]
+ffprobe = "/mnt/c/Users/winuser/Programs/ffmpeg/ffmpeg-4.4.1-win-64/ffprobe.exe"
+avidemux = "/mnt/c/Program Files/Avidemux 2.8 VC++ 64bits/avidemux_cli.exe"
+
 [coord]
 "1start_sample.jpg" = [ 1317, 71,]
 "1start_sample.jpg_col" = [ 250, 255, 0,]
